[package]
name = "water_buffer"
version = "1.0.1-Beta.1.9"
edition = "2024"
authors = ["HassanSharara"]
repository = "https://github.com/HassanSharara/water_buffer"
homepage = "https://github.com/HassanSharara/water_buffer"
license = "MIT"
readme = "README.md"
categories = ["memory-management","caching","network-programming"]
keywords = ["buffer","water-buffer","water_buffer"]
description = "A high-performance, zero-overhead byte buffer implementation in Rust that outperforms the industry-standard `BytesMut` by **6-11x** in most scenarios."



[dev-dependencies]
bytes = "1.11.0"


[features]
circular_buffer = []
impl_bytes = ["bytes"]
bytes = ["dep:bytes"]

[dependencies]
bytes = { version = "1.11.0", optional = true }

[package.metadata]
unstable-features = ["circular_buffer"]
