[package]
name = "water_buffer"
version = "1.2.2-Beta.11"
edition = "2024"
authors = ["HassanSharara"]
repository = "https://github.com/HassanSharara/water_buffer"
homepage = "https://github.com/HassanSharara/water_buffer"
license = "MIT"
readme = "README.md"
categories = ["memory-management","caching","network-programming"]
keywords = ["buffer","water-buffer","water_buffer"]
description = "A high-performance, zero-overhead byte buffer implementation in Rust that outperforms the industry-standard `BytesMut` by **6-11x** in most scenarios."



[dev-dependencies]
bytes = "1.11.0"


[features]
circular_buffer = []
bytes = ["dep:bytes"]
uring = ["dep:tokio-uring"]

[dependencies]
bytes = { version = "1.11.0", optional = true }
tokio-uring = {version = "0.5.0",optional = true}
#itoa = "1.0.16"

[package.metadata]
unstable-features = ["circular_buffer"]
